# usb_plugins

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart  printer_test_screen.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: esc_pos_commands.dart  libusb_bindings_generated.dart  usb_device_info.dart  usb_plugins.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  usb_plugins.c
windows/: CMakeLists.txt
